--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,3 +26,16 @@
   color: #ffffff;
   padding-top: 20px;
 }
+
+.keeper{
+  background-color: #ff0000;
+  color: #ffffff;
+}
+
+.tableFixHead          { overflow-y: auto; height: 100px; }
+.tableFixHead thead th { position: sticky; top: 0; }
+
+/* Just common table stuff. Really. */
+table  { border-collapse: collapse; width: 100%; }
+th, td { padding: 8px 16px; }
+th     { background:#eee; }
