--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,9 +33,14 @@
 }
 
 .tableFixHead          { overflow-y: auto; height: 100px; }
-.tableFixHead thead th { position: sticky; top: 0; }
+.tableFixHead thead th { position: sticky; top: 65px; }
 
 /* Just common table stuff. Really. */
 table  { border-collapse: collapse; width: 100%; }
 th, td { padding: 8px 16px; }
 th     { background:#eee; }
+
+.search-form{
+  padding: 15px;
+  background-color: #ffffff;
+}
